--- a/index.pug
+++ b/index.pug
@@ -7,18 +7,23 @@ html.h-full.m-0(lang="en")
         title Sarah Server BBS
         link(rel="stylesheet", href="/output.css")
     body.h-full.m-0.py-8.bg-fixed.bg-center.bg-cover(style=`background-image: url(/bg/${Math.floor(Math.random()*6)}.jpg)`)
-        div.max-w-screen-sm.mx-auto.rounded-lg.p-4(style="background-color: #ffffffbb")
+        div.max-w-screen-sm.mx-auto.rounded-lg.p-4(style="background-color: #ffffffcc")
             h1.text-2xl.my-2 Server Status:
             p #{players || "0"} #{(players == 1 ? "player" : "players")} / #{max} max online
             if sample && sample.length
-                p.italic Including but not limited to: #{sample.map(s=>s.name).join(", ")}
-            h1.text-2xl.my-2 Server BBS
+                p.italic Including but not limited to: 
+                    each player, i in sample
+                        span.font-bold #{player.name}
+                        .
+                            #{sample[i+1] ? ', ' : ''}
+            h1.text-2xl.my-2 Live BBS
             form.form(onsubmit="sendMessage(event.preventDefault())")
-                textarea#message-text.border.block.my-4.p-2(placeholder="Write a post", required="true", style="width: 80%")
-                input#sender-name.border.block.my-4.p-2(type="text", placeholder="Sign your name", required="true")
+                textarea#message-text.border.block.my-4.p-2.font-mono(placeholder="Write a post", required="true", style="width: 80%")
+                input#sender-name.border.block.my-4.p-2.font-mono(type="text", placeholder="Sign your name", required="true")
                 button.bg-blue-400.rounded-full.px-4.py-1(type="submit") Make the Post
             h1.text-2xl.my-2 The posts so far:
-            ul#bbs-container.ml-4.list-disc
+            div.pl-4.py-2.bg-white
+                ul#bbs-container.font-mono
             script(src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js")
             script(src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js")
             script(src="/index.js")
